# src/api/swagger.yaml
@@ -284,6 +284,34 @@ paths:
         404:
           description: "Review not found"
       x-swagger-router-controller: "Review"
+  /reviews/byBook/{bookId}:
+    get:
+      tags:
+        - "review"
+      summary: "Find reviews by book ID"
+      description: "Returns reviews"
+      operationId: "getReviewsByBook"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "bookId"
+          in: "path"
+          description: "ID of book of reviews"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        200:
+          description: "A collection of reviews"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Review"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Reviews not found"
+      x-swagger-router-controller: "Review"
   /events:
     get:
       tags:
@@ -406,6 +434,33 @@ paths:
         404:
           description: "unauthorized"
       x-swagger-router-controller: "User"
+  /reviews/create:
+    post:
+      tags:
+      - "review"
+      summary: "Create review"
+      description: "Create new review"
+      operationId: "createReviewPOST"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "bookId"
+        in: "formData"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "comment"
+        in: "formData"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "succesfull creation"
+        404:
+          description: "unauthorized"
+      x-swagger-router-controller: "Review"
   /cart/{cartId}:
     get:
       tags:
